--- a/WebApp/intime/templates/trackemployee/index.html
+++ b/WebApp/intime/templates/trackemployee/index.html
@@ -1,15 +1,13 @@
-<!-- {% load staticfiles %} -->
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 	<head>
 		<meta charset=utf-"8" />
-	<!--	REINABLE IN PRODUCTION <link type="text/css" rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" /> -->
-	<!--	REINABLE IN PRODUCTION <link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}"/> -->
-	<!--  	REINABLE IN PROUCTION <link type="text/css" href="{% static "css/index.css" %}" rel="stylesheet">	-->
+		<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
+	<link type="text/css" rel="stylesheet" href="{% static "css/bootstrap.min.css" %}" /> 
+	<link type="text/css" rel="stylesheet" href="{% static "css/style.css" %}"/> 
+	<link type="text/css" href="{% static "css/index.css" %}" rel="stylesheet">
 	<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-	<link  rel="stylesheet" href="bootstrap.min.css" >
-	<link  rel="stylesheet" href="style.css" >
-	<link  rel="stylesheet" href="index.css" >
 	
 	<script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
@@ -122,7 +120,9 @@
 		  				{% if employees %}
 				<ul>
 					{% for employee in employees %}
-						<li><a href="/employee/{{ employee.id }}">{{ employee.id }} {{ employee.last_name }} {{ employee.first_name }}</a></li>
+						{% if employee.is_active and not employee.is_superuser %}
+						<li><a href="/employee/{{ employee.id }}/">{{ employee.id }} {{ employee.last_name }} {{ employee.first_name }}</a></li>
+						{% endif %}
 					{% endfor %}
 				</ul>
 				{% endif %}
@@ -134,7 +134,9 @@
 						{% if employees %}
 				<ul>
 					{% for employee in employees %}
-						<li><a href="/employee/{{ employee.id }}">{{ employee.id }} {{ employee.last_name }} {{ employee.first_name }}</a></li>
+						{% if employee.is_active and not employee.is_superuser and employee.employee.present %}
+						<li><a href="/employee/{{ employee.id }}/">{{ employee.id }} {{ employee.last_name }} {{ employee.first_name }}</a></li>
+						{% endif %}
 					{% endfor %}
 				</ul>
 				{% endif %}
@@ -146,7 +148,9 @@
 	  			{% if employees %}
 			<ul>
 				{% for employee in employees %}
-					<li><a href="/employee/{{ employee.id }}">{{ employee.id }} {{ employee.last_name }} {{ employee.first_name }}</a></li>
+					{% if employee.is_active and not employee.is_superuser and not employee.employee.present %}
+					<li><a href="/employee/{{ employee.id }}/">{{ employee.id }} {{ employee.last_name }} {{ employee.first_name }}</a></li>
+					{% endif %}
 				{% endfor %}
 			</ul>
 			{% endif %}
