--- a/WebApp/intime/templates/trackemployee/employee.html
+++ b/WebApp/intime/templates/trackemployee/employee.html
@@ -40,18 +40,10 @@
 
 
 		<div class="containr-fluid">
-			<h2 class="sub-header">Employee Listing</h2>
+			<h2 class="sub-header">{{ employee.user.first_name }} {{ employee.user.last_name }}</h2>
 			<div class="table-responsive">
 				<table class="table table-striped">
 					<tbody>
-						<tr>
-							<th>UID:</th>
-							<th>{{ employee.uid }}</th>
-						</tr>
-						<tr>
-							<th>Name:</th>
-							<th>{{ employee.user.first_name }} {{ employee.user.last_name }}</th>
-						</tr>
 						<tr>
 							<th>Email:</th>
 							<th>{{ employee.user.email }}</th>
@@ -73,18 +65,7 @@
 				</table>
 			</div>
 		</div>
-		<div class="jumbotron">
-			<h3>Weekly Summary</h3>
-			{% for tl in time_logs %}
-				<h6>{{ tl.time_in }} - 
-					{% if tl.time_out %}
-						{{ tl.time_out }}
-					{% else %} 
-						Now
-					{% endif %}
-				</h6>
-			{% endfor %}
-			{{ week_to_tl }}
+		<div>
 			<h4>Timeline</h4>
 			<div>
 				<script type="text/javascript">
@@ -94,17 +75,15 @@
 					{% endfor %}],
 			laneLength = lanes.length,
 			items = [
-					{"lane": 1, "id": "Muromachi", "start": 1340, "end": 1560},
-					{"lane": 1, "id": "Edo", "start": 1610, "end": 1860},
-					{"lane": 1, "id": "Meiji", "start": 1870, "end": 1900},
-					{"lane": 1, "id": "Taisho", "start": 1910, "end": 1920},
-					{"lane": 1, "id": "Showa", "start": 1925, "end": 1985},
-					{"lane": 1, "id": "Heisei", "start": 1990, "end": 1995},
-					{"lane": 2, "id": "Three Kingdoms", "start": 10, "end": 670},
-					{"lane": 2, "id": "North and South States", "start": 690, "end": 900},
-					{"lane": 2, "id": "Goryeo", "start": 920, "end": 1380},
-					{"lane": 2, "id": "Joseon", "start": 1390, "end": 1890},
-					{"lane": 2, "id": "Korean Empire", "start": 1900, "end": 1945}]
+					{"lane": 0, "start": 456, "end": 1044},
+					{"lane": 1, "start": 344, "end": 1111},
+					{"lane": 2, "start": 356, "end": 1000},
+					{"lane": 3, "start": 453, "end": 899},
+					{"lane": 3, "start": 1005, "end": 1170},
+					{"lane": 4, "start": 600, "end": 1200},
+					{"lane": 5, "start": 500, "end": 955},
+					{"lane": 6, "start": 523, "end": 1104},
+					]
 			timeBegin = 0,
 			timeEnd = 1440;
 		</script>
@@ -131,7 +110,7 @@
 		var chart = d3.select("body")
 					.append("svg")
 					.attr("width", w + m[1] + m[3])
-					.attr("height", h + m[0] + m[2])
+					.attr("height", miniHeight + m[0] + m[2])
 					.attr("class", "chart");
 		
 		chart.append("defs").append("clipPath")
@@ -140,37 +119,37 @@
 			.attr("width", w)
 			.attr("height", mainHeight);
 
-		var main = chart.append("g")
-					.attr("transform", "translate(" + m[3] + "," + m[0] + ")")
-					.attr("width", w)
-					.attr("height", mainHeight)
-					.attr("class", "main");
+		// var main = chart.append("g")
+		// 			.attr("transform", "translate(" + m[3] + "," + m[0] + ")")
+		// 			.attr("width", w)
+		// 			.attr("height", mainHeight)
+		// 			.attr("class", "main");
 
 		var mini = chart.append("g")
-					.attr("transform", "translate(" + m[3] + "," + (mainHeight + m[0]) + ")")
+					.attr("transform", "translate(" + m[3] + "," + (m[0]) + ")")
 					.attr("width", w)
 					.attr("height", miniHeight)
 					.attr("class", "mini");
 		
-		//main lanes and texts
-		main.append("g").selectAll(".laneLines")
-			.data(items)
-			.enter().append("line")
-			.attr("x1", m[1])
-			.attr("y1", function(d) {return y1(d.lane);})
-			.attr("x2", w)
-			.attr("y2", function(d) {return y1(d.lane);})
-			.attr("stroke", "lightgray")
+		// //main lanes and texts
+		// main.append("g").selectAll(".laneLines")
+		// 	.data(items)
+		// 	.enter().append("line")
+		// 	.attr("x1", m[1])
+		// 	.attr("y1", function(d) {return y1(d.lane);})
+		// 	.attr("x2", w)
+		// 	.attr("y2", function(d) {return y1(d.lane);})
+		// 	.attr("stroke", "lightgray")
 
-		main.append("g").selectAll(".laneText")
-			.data(lanes)
-			.enter().append("text")
-			.text(function(d) {return d;})
-			.attr("x", -m[1])
-			.attr("y", function(d, i) {return y1(i + .5);})
-			.attr("dy", ".5ex")
-			.attr("text-anchor", "end")
-			.attr("class", "laneText");
+		// main.append("g").selectAll(".laneText")
+		// 	.data(lanes)
+		// 	.enter().append("text")
+		// 	.text(function(d) {return d;})
+		// 	.attr("x", -m[1])
+		// 	.attr("y", function(d, i) {return y1(i + .5);})
+		// 	.attr("dy", ".5ex")
+		// 	.attr("text-anchor", "end")
+		// 	.attr("class", "laneText");
 		
 		//mini lanes and texts
 		mini.append("g").selectAll(".laneLines")
@@ -192,8 +171,8 @@
 			.attr("text-anchor", "end")
 			.attr("class", "laneText");
 
-		var itemRects = main.append("g")
-							.attr("clip-path", "url(#clip)");
+		// var itemRects = main.append("g")
+		// 					.attr("clip-path", "url(#clip)");
 		
 		//mini item rects
 		mini.append("g").selectAll("miniItems")
@@ -272,4 +251,23 @@
 		</script>
 			</div>
 		</div>
+		<div>
+			<h4>Logs</h4>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>Date</th>
+						<th>Time In</th>
+						<th>Time Out</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for log in time_logs %}
+						<tr>
+							<td>{{log.time_in.date}}</td>
+							<td>{{log.time_in.time}}</td>
+							<td>{{log.time_out.time}}</td>
+						</tr>
+					{% endfor %}
+				</tbody>
 </body>
